# FineNav

./: .clang-format  .gitignore  .gitmodules  README.en.md  README.md  tomography_results.pcd
fn_behavior/: CMakeLists.txt  README.md  package.xml  plugin.xml
fn_behavior/include/fn_behavior/: random_goal_node.hpp
fn_behavior/src/: random_goal_node.cpp
fn_bringup/: CMakeLists.txt  package.xml
fn_bringup/behavior_tree/: navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml  navigate_w_replanning_only_if_goal_is_updated.xml  random_goal.xml
fn_bringup/config/: MID360_config.json  fastlio_gazebo_config.yaml  fastlio_mid360_config.yaml  fastlio_unilidar_config.yaml  map_manager.yaml  nav2_aggressive.yaml  nav2_aggressive_teb.yaml  nav2_conservative.yaml  nav2_real.yaml  nav2_sim_aggressive.yaml  nav2_sim_conservative.yaml  pct_config.yaml  pct_planner.yaml  pct_sim_planner.yaml  pointlio_mid360_config.yaml  recorder_config.yaml
fn_bringup/launch/: bringup.launch.py  bringup_gazebo_sim.launch.py  bringup_maptest.launch.py  bringup_nav2_bag.launch.py  bringup_nav2_real.launch.py  driver.launch.py  gazebo_driver.launch.py  gazebo_slam.launch.py  navigation.launch.py  navigation_launch.py  slam.launch.py
fn_bringup/maps/: blank.yaml  fins_bot_map.yaml
fn_bringup/rviz/: FineNav.rviz  FineNav_Unitree.rviz  debug_mapping.rviz
fn_fine_pct/: CMakeLists.txt  package.xml
fn_fine_pct/config/: tomography.rviz
fn_fine_pct/include/fn_fine_pct/: Config.hpp  Planner.hpp  PlannerConfig.hpp  Tomography.hpp  TomographyConfig.hpp
fn_fine_pct/include/planner/: Planner.hpp  PlannerConfig.hpp  Planner_cp.hpp  a_star.hpp  a_star_search.hpp  pct_planner.hpp
fn_fine_pct/include/tomography/: Tomography.hpp  TomographyConfig.hpp  type_defs.hpp
fn_fine_pct/rsc/pcd/: final_map_v14.pcd  planned_path.txt
fn_fine_pct/src/planner/: Planner_cp.cpp  a_star.cpp  a_star_search.cpp  pct_planner.cpp  planner.cpp  planner_node.cpp
fn_fine_pct/src/tomography/: tomography.cpp  tomography_node.cpp
fn_localization/localization_manager/: CMakeLists.txt  package.xml
fn_localization/localization_manager/config/: example.yaml
fn_localization/localization_manager/include/: localization_manager.h
fn_localization/localization_manager/launch/: example.launch.py  example_gazebo.launch.py
fn_localization/localization_manager/src/: localization_manager.cpp  localization_manager_node.cpp
fn_mapping/: CMakeLists.txt  package.xml
fn_mapping/GridMap/: CMakeLists.txt  package.xml
fn_mapping/GridMap/demo/: CMakeLists.txt  grid_map_demo.cpp  move_demo.cpp  raycast_demo.cpp  raycast_in_moved_grid_demo.cpp
fn_mapping/GridMap/include/: grid_map.hpp  grid_map_impl.hpp  grid_map_iterator.hpp  grid_map_math.hpp
fn_mapping/GridMap/src/: test.cpp
fn_mapping/GridMap/test/: CMakeLists.txt
fn_mapping/GridMap/test/integration/: grid_map_test.cpp
fn_mapping/GridMap/test/unit/: get_difference_set_test.cpp  grid_map_math_test.cpp  grid_map_test.cpp
fn_mapping/GridMap/test/utils/: compare_vectors.hpp
fn_mapping/include/: grid_map.hpp  grid_map_impl.hpp  grid_map_math.hpp  grid_map_math_copy.hpp
fn_mapping/map_interface/: CMakeLists.txt  package.xml
fn_mapping/map_interface/include/: map_attribute.hpp  map_interface.hpp  type_defs.hpp
fn_mapping/map_manager/: CMakeLists.txt  package.xml
fn_mapping/map_manager/include/: map_manager.h
fn_mapping/map_manager/src/: map_manager.cpp  map_manager_node.cpp
fn_mapping/octomap_server/: CMakeLists.txt  package.xml
fn_mapping/octomap_server/demo/: CMakeLists.txt  octomap_server_demo.cpp  octree_to_pcd.cpp  pcd_to_octree.cpp
fn_mapping/octomap_server/include/: octomap_server.hpp
fn_mapping/octomap_server/src/: octomap_server.cpp
fn_mapping/src/: test.cpp
fn_mapping/terrain_analysis/: CMakeLists.txt  package.xml
fn_mapping/terrain_analysis/include/: terrain_analysis_base.hpp  terrain_analysis_simple.hpp  terrain_map_accessor.hpp
fn_mapping/terrain_analysis/src/: terrain_analysis_base.cpp  terrain_analysis_simple.cpp  terrain_analysisi_base.cpp
fn_mapping/terrain_analysis_core/: CMakeLists.txt  package.xml
fn_mapping/terrain_analysis_core/include/: attribute_map.hpp  map_attribute.hpp  map_interface.hpp  terrain_analyzer_base.hpp  terrain_analyzer_interface.hpp  terrain_data_view.hpp  vector_matrix.hpp
fn_mapping/terrain_analyzer/: CMakeLists.txt  package.xml  simple_terrain_analyzer.xml
fn_mapping/terrain_analyzer/include/: simple_terrain_analyzer.hpp
fn_mapping/terrain_analyzer/src/: simple_terrain_analyzer.cpp
fn_maptest/: CMakeLists.txt  README.md  package.xml
fn_maptest/include/fn_maptest/: pcd_publisher_node.hpp
fn_maptest/launch/: fn_maptest.launch.py
fn_maptest/resource/: cropped_10.pcd  cropped_5.pcd
fn_maptest/src/: main.cpp
fn_perception/octomap_mapping/: CMakeLists.txt  README.md  package.xml
fn_perception/octomap_mapping/include/octomap_server/: octomap_server.hpp
fn_perception/octomap_mapping/src/: octomap_server.cpp
fn_sim/Fines_Gazebo_Simulator/: CMakeLists.txt  package.xml
fn_sim/Fines_Gazebo_Simulator/config/: ros_gz_bridge.yaml
fn_sim/Fines_Gazebo_Simulator/launch/: bringup_gazebo.launch.py  gazebo.launch.py  robot.launch.py  rviz.launch.py
fn_sim/Odometry_gz_manager/: CMakeLists.txt  package.xml
fn_sim/Odometry_gz_manager/include/: Odometry_gz_manager.h
fn_sim/Odometry_gz_manager/launch/: example_gazebo.launch.py
fn_sim/Odometry_gz_manager/src/: Odometry_gz_manager.cpp  Odometry_gz_manager_node.cpp
fn_sim/ign_sim_pointcloud_tool/: CMakeLists.txt  README.md  package.xml
fn_sim/ign_sim_pointcloud_tool/include/ign_sim_pointcloud_tool/: cloud_frame_id_changer.hpp  tf_cloud_transformer.hpp
fn_sim/ign_sim_pointcloud_tool/launch/: pointcloud_complete_launch.py
fn_sim/ign_sim_pointcloud_tool/src/: cloud_frame_id_changer..cpp  point_cloud_converter.cpp  tf_cloud_transformer.cpp
fn_utils/: CMakeLists.txt  package.xml  serial_binding.sh
fn_utils/include/: cloud_publish_helper.hpp
fn_utils/src/: cloud_publish_helper.cpp
(+9 files in other folders)
