<?xml version="1.0"?>
<package format="3">
  <name>fn_behavior</name>
  <version>0.0.1</version>
  <description>Custom BT behavior for random goal generation</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>fn_interfaces</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <behaviortree_cpp_v3 plugin="${prefix}/plugin.xml" />
  </export>
</package>