<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fn_maptest</name>
  <version>0.0.0</version>
  <description>ROS2 package to publish specified point cloud</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <!-- 导出头文件路径 -->
  <exec_depend>ament_index_cpp</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <ament_cmake include_directories="include"/>
  </export>
</package>