<?xml version="1.0"?>
<package format="3">
    <name>localization_manager</name>
    <version>0.1.0</version>
    <description>Robot Navigation Stack for Fines robot.</description>

    <maintainer email="wangjinghui@sjtu.edu.cn">Jinghui Wang</maintainer>
    <license>MPL 2.0</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2</depend> <!-- 添加 tf2 库的依赖 -->
    <depend>tf2_geometry_msgs</depend>
    <depend>rosidl_runtime_c</depend>


    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
