<?xml version="1.0"?>
<package format="3">
    <name>fn_terrain_analyzer</name>
    <version>0.1.0</version>
    <description>FineNav Terrain Traversability Analysis Module</description>

    <maintainer email="wangjinghui@sjtu.edu.cn">Jinghui Wang</maintainer>
    <license>MPL 2.0</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>pluginlib</depend>
    <depend>fn_terrain_analysis_core</depend>

    <test_depend>ament_cmake_gtest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
